click anywhere to increase counter - button to full screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <div id="game-area" style="display: none;">
             <h2>1v1 Clicker Game</h2>
             <p>First to 100 clicks wins!</p>
-            <button id="click-button">Click Me!</button>
+            <p>Tap anywhere to click!</p>
             <p>Your clicks: <span id="your-clicks">0</span></p>
             <p>Opponent clicks: <span id="opponent-clicks">0</span></p>
             <p id="result"></p>
