--- a/static/styles.css
+++ b/static/styles.css
@@ -40,6 +40,19 @@ button:hover {
     background-color: #45a049;
 }
 
+#game-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
 @media (min-width: 768px) {
     #content {
         display: none !important;
