added cars and moving animation

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1v1 Clicker Game</title>
+    <title>1v1 Car Race Game</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
@@ -22,12 +22,8 @@
         </div>
 
         <div id="game-area" style="display: none;">
-            <h2>1v1 Clicker Game</h2>
-            <p>First to 100 clicks wins!</p>
-            <p>Tap anywhere to click!</p>
-            <p>Your clicks: <span id="your-clicks">0</span></p>
-            <p>Opponent clicks: <span id="opponent-clicks">0</span></p>
-            <p id="result"></p>
+            <div id="car1" class="car"></div>
+            <div id="car2" class="car"></div>
         </div>
     </div>
 
