--- a/static/styles.css
+++ b/static/styles.css
@@ -48,12 +48,15 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #87CEEB; /* Sky blue background */
+    background-image: url('/static/road.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .car {
     position: absolute;
-    width: 50px;
+    width: 75px;
     height: 100px;
     background-size: contain;
     background-repeat: no-repeat;
