--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
         </div>
 
         <div id="game-area" style="display: none;">
+            <div id="start-text">START</div>
             <div id="car1" class="car"></div>
             <div id="car2" class="car"></div>
         </div>
