--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
             <div id="start-text">START</div>
             <div id="car1" class="car"></div>
             <div id="car2" class="car"></div>
+            <button id="ready-button" style="display: none;">Ready</button>
         </div>
     </div>
 
