--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,10 @@
             <div id="car1" class="car"></div>
             <div id="car2" class="car"></div>
             <button id="ready-button" style="display: none;">Ready</button>
+            <audio id="background-music" loop>
+                <source src="/static/race-bg-music.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
         </div>
     </div>
 
